<resources>
    <string name="app_name">SDKdemo</string>
    <string name="app_select">app select</string>
    <string name="cancel">Cancel</string>
    <string name="determine">Ok</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="executeshellcmd">Execute The Shell Command</string>
    <string name="executeRootCMD">Execute The Root Command</string>
    <string name="getRootAuth">Get The Root Command Fingerprint</string>
    <string name="recovery">Recovery</string>
    <string name="canRecovery">Whether to Support The Recovery</string>
    <string name="getHardwareSNPlaintext">Hardware Serial Number Text</string>
    <string name="getHardwareSNCiphertext">Hardware Serial Number Ciphertext</string>
    <string name="bank_card">Bank Card</string>
    <string name="pboc_test">PBOC Test</string>
    <string name="basis_test">Basis Test</string>
    <string name="serialport_manager_object">Serialport Manager Object</string>
    <string name="basis_serialport_no">Basis Serialport No</string>
    <string name="device_name">Device Name</string>
    <string name="serialport_device_object">Serialport Device Object</string>
    <string name="please_input_address">Please Input Address</string>
    <string name="please_input_password">Please Input Password</string>
    <string name="please_input_new_password">Please Input New Password</string>
    <string name="please_input_amount">Please Input Amount</string>
    <string name="please_input_order_no">Please Input Order No</string>
    <string name="please_input_admin_password">Please Input Admin Password</string>
    <string name="please_input_user_name">Please Input User Name</string>
    <string name="test_data">Test Data</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="check_card">Check Card</string>
    <string name="check_card_with_encrypted_TDK">check Card With Encrypted TDK</string>
    <string name="send_apdu_instruction">Send APDU Instruction</string>
    <string name="disconnect">Disconnect</string>
    <string name="amount">Amount</string>
    <string name="next_step">Next Step</string>
    <string name="input_keyboard_display_mode">Please Input The Password Keyboard Display Mode (0 or 1)</string>
    <string name="connection">Connection</string>
    <string name="set_network_panel_display">Set The Network Panel Display</string>
    <string name="set_network_panel_not_display">Set The Network Panel Not Display</string>
    <string name="get_network_panel_is_displayed">Get Network Panel Whether Is Displayed</string>
    <string name="set_panel_blue">Set Panel Blue</string>
    <string name="set_panel_white">Set Panel White</string>
    <string name="get_panel_color">Get Panel Color</string>
    <string name="set_3G_signal_is_displayed">Set 3G Signal Is Displayed</string>
    <string name="set_clock_is_displayed">Set Whether The Clock Is Displayed</string>
    <string name="restore">Recovery</string>
    <string name="set_panel_color">Set The Panel Color</string>
    <string name="set_date_is_displayed">Set Whether The Date Is Displayed</string>
    <string name="set_ethernet_connection_is_displayed">Set Whether The Ethernet Connection Is Displayed</string>
    <string name="set_wifi_status_coexist_with_3G">Set Wifi Status Coexist With 3G</string>
    <string name="set_display_wifi_icon">Set Whether to Display Wifi Icon</string>
    <string name="get_web_panel_coordinates">Get The web Panel Coordinates</string>
    <string name="set_web_panel_coordinates">Set The web Panel Coordinates</string>
    <string name="get_date_format">Get The Date Format</string>
    <string name="set_time_format">Set The Tate Format</string>
    <string name="get_time_format">Get The Tate Format</string>
    <string name="set_date_format">Set The Date Format</string>
    <string name="cancel_check_card">Cancel Check Card</string>
    <string name="cancel_check_encrypted_card">Cancel Check Encrypted Card</string>
    <string name="consume">Consume</string>
    <string name="read_e_cash_balance">Reading the electronic cash balance</string>
    <string name="read_card_transaction_log">Read card transaction log</string>
    <string name="read_the_looped_log">Read the looped log</string>
    <string name="read_kernel_data">Read kernel data</string>
    <string name="increase_public_key_parameters">Add public key</string>
    <string name="update_public_key_parameters">Update the public key</string>
    <string name="clear_public_key_parameters">Clear the public key</string>
    <string name="clear_the_transaction_log">Clear the pay log</string>
    <string name="interrupt_the_PBOC_process">Pause of the PBOC</string>
    <string name="end_the_PBOC_process">End of the PBOC</string>
    <string name="add_aid">Add AID</string>
    <string name="update_aid">Update AID</string>
    <string name="set_tlv1">Setting parameters</string>
    <string name="set_tlv2">Setting parameters(UTF-8)</string>
    <string name="set_tlv3">Setting parameters(UTF-16)</string>
    <string name="set_tlv4">Setting parameters(GBK)</string>
    <string name="import_online_result">Import online result</string>
    <string name="isexist_aid_publicKey">Is exist AID and public key</string>
    <string name="pp_tip">Input password on pinpad</string>
    <string name="passwd">Input password on pinpad</string>
    <string name="please_select_password_keyboard_type">Choice pinpad type</string>
    <string name="built_in">Internal</string>
    <string name="external">External</string>
    <string name="password_keyboard_mode_setting">Set pinpad mode</string>
    <string name="order">Order</string>
    <string name="out_of_order">Out of order</string>
    <string name="read_the_online_PIN">Read online PIN</string>
    <string name="input_the_PIN_twice">Input PIN twice</string>
    <string name="inject_the_master_key_plain_text">Inject the master key plain text</string>
    <string name="inject_PIK">Inject PIK</string>
    <string name="inject_TDK">Inject TDK</string>
    <string name="inject_the_master_key_encrypted_MAK">Inject the master key encrypted MAK</string>
    <string name="TDK_data_encryption">Encryption TDK datas</string>
    <string name="get_random_number">Get random number</string>
    <string name="cancel_PIN_input">Cancel pin input</string>
    <string name="read_offline_PIN">Read offline PIN</string>
    <string name="inject_TEK">Inject TEK</string>
    <string name="save_TMK">Inject master key</string>
    <string name="save_MAK">Inject encrypted MAK</string>
    <string name="save_PIN">Inject encrypted PIK</string>
    <string name="save_TDK">Inject encrypted TDK</string>
    <string name="MAC_calculation">Calculation MAC</string>
    <string name="password_keyboard_display">Display pinpad</string>
    <string name="confirm_PIN_input">Confirm PIN</string>
    <string name="terminal_sn_str">SN</string>
    <string name="silent_instal_str">Silent install</string>
    <string name="ksn_str">KSN</string>
    <string name="driver_version_str">Driver version</string>
    <string name="current_sdk_version_str">SDK Version</string>
    <string name="update_system_time_str">Update sys time</string>
    <string name="stroage_path_str">Stroage path</string>
    <string name="update_terminal_driver_str">Update terminal driver</string>
    <string name="imsi_no_str">IMSI</string>
    <string name="terminal_mode_str">Terminal mode</string>
    <string name="iccid_str">ICCID</string>
    <string name="imei_str">IMEI</string>
    <string name="hardware_version_str">Hareware version</string>
    <string name="safety_firmware_str">Safety firmware info</string>
    <string name="manufacturer_name_str">Manufacturer</string>
    <string name="sys_info_str">System info</string>
    <string name="sys_info_build_type">Build Type</string>
    <string name="sys_user">Production machine</string>
    <string name="sys_userdebug">Development machine</string>
    <string name="sys_version_str">System version</string>
    <string name="kernel_info_str">Kernel info</string>
    <string name="reboot_str">Reboot</string>
    <string name="specification_number_str">Specification number</string>
    <string name="update_firmware_str">Update firmware</string>
    <string name="query_update_state_str">Query update state</string>
    <string name="set_apn_str">Set APN</string>
    <string name="psim_card_no_str">PSIM card number</string>
    <string name="device_serial_no_str">Deveice serial number</string>
    <string name="manufacturer_serial_no_str">Manufacturer number</string>
    <string name="device_infos_str">All system infos</string>
    <string name="current_sdk_versions_str">Get current sdk version</string>
    <string name="release_str">Release</string>
    <string name="keyboard_status_str">Keyboard status</string>
    <string name="open_keyboard_str">Open keyboard</string>
    <string name="close_keyboard_str">Close keyboard</string>
    <string name="ip_address_str">Get IP</string>
    <string name="mac_address_str">Get mac</string>
    <string name="track_data_str">Get track data</string>
    <string name="encrypt_track_data">UnionPay encrypt track data</string>
    <string name="encrypt_format_track_data">Get encrypt format track data</string>
    <string name="cancel_swipe_str">Cancel swipe</string>
    <string name="port_one_str">Port one</string>
    <string name="port_two_str">Port two</string>
    <string name="open_port_str">Open port</string>
    <string name="init_port_str">Init port</string>
    <string name="send_data_str">Send data</string>
    <string name="receive_data_str">Receiver data</string>
    <string name="close_port_str">Close port</string>
    <string name="open_str">Open</string>
    <string name="get_sn">GetSn</string>
    <string name="get_model" >GetModel</string>
    <string name="card_type_str">Read card type</string>
    <string name="reset_str">Reset</string>
    <string name="swipe_card_str">Check Card</string>
    <string name="apdu_commond_str">Send APDU command</string>
    <string name="halt_nfc_card_str">Halt nfc card</string>
    <string name="authentication_str">Authentication</string>
    <string name="add_value_str">Add values</string>
    <string name="reduce_value_str">reduce values</string>
    <string name="block_data_str">Read block data</string>
    <string name="write_block_data_str">Write block data</string>
    <string name="close_str">Close</string>
    <string name="pay_log_str">Quary pay log</string>
    <string name="no_pay_log_str">No pay log</string>
    <string name="scanner_str">Scanner</string>
    <string name="choice_psam_card_no_str">Choice PSAM number</string>
    <string name="apdu_test_str">APDU Test</string>
    <string name="psam_reset_str">Reset PSAM</string>
    <string name="print_init">print init</string>
    <string name="print_status_str">Get print status</string>
    <string name="print_text_str">Print Text</string>
    <string name="print_barcode_str">Print barCode</string>
    <string name="print_bitmap_str">Print bitmap</string>
    <string name="set_print_hgray_str">Set print gray(height)</string>
    <string name="set_print_lgray_str">Set print gray(low)</string>
    <string name="set_print_ngray_str">Set print gray(nomall)</string>
    <string name="print_big_buy_str">Print buy(big)</string>
    <string name="print_small_buy_str">Print buy(small)</string>
    <string name="print_bitmaps_str">Print bitmaps</string>
    <string name="print_qrcode_str">Print QRCode</string>
    <string name="print_symbol">Print currency symbol</string>
    <string name="print_step">Print step</string>
    <string name="print_temperature">Print temperature</string>
    <string name="is_support_native_sign">Whether to support native sign</string>
    <string name="Get_native_sign_spec_version">Get native sign spec version</string>
</resources>