<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_address" />

    <EditText
        android:id="@+id/et_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_password"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_new_password"
        android:visibility="gone" />

</LinearLayout>