<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal" >

    <include layout="@layout/left_scroll" />

    <LinearLayout
        android:id="@+id/main_linearlayout"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/choice_psam_card_no_str"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/psam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="psam1"
                android:text="1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/psam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="psam2"
                android:text="2"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/psam3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="psam3"
                android:text="3"
                android:textSize="20sp"
                android:visibility="gone" />
        </RadioGroup>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="open"
            android:text="@string/open_str" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="apdutest"
            android:text="@string/apdu_test_str" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="psamreset"
            android:visibility="gone"
            android:text="@string/psam_reset_str" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="close"
            android:text="@string/close_str" />
    </LinearLayout>

</LinearLayout>